# roms-explorer

./: index.html  oranda.json  package.json  tailwind.config.cjs  vite.config.ts
.github/: FUNDING.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Details.tsx  FSImage.tsx  Layout.tsx  MobileNav.tsx  Roms.tsx  SideNav.tsx
src/utils/: games.ts  useRomsLoad.ts
